--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
-APP_NAME=Laravel
+APP_NAME=Meal
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:sKtiAewD73JkOZ9MPSN5MhQc5an6t1mhu6MRLAsHAU0=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://meal.test
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=meals
+DB_USERNAME=shaon
+DB_PASSWORD=%Sh170892
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
